# pdf-archive-core

./: README.md  pyproject.toml
pdf_archive_core/: __init__.py  core.py
